re-format by prettier